# dino

./: .gitignore  main_dino.py  mm.py  mm_export.py  pyproject.toml  utils.py
docs/: 01-SETUP.md  02-TRAIN.md  03-INSPECT.md
