[project]
name = "dino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mmdet>=3.3.0",
    "mmengine>=0.10.7",
    "mmpretrain>=1.2.0",
    "ninja>=1.11.1.3",
    "openmim>=0.3.9",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]
